refactor: update vehicle table columns for better clarity and organization